
Sat Sep  8 19:51:41 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added `mkMake` script to scripts directory. This new file forms
	  part of the rationalisation of the ELKS Makefile system that I
	  am undertaking, but does not impact on the current system in any
	  way. It is an important part of the rationalised Makefile system
	  though, so needs to be included.

Thu Aug 30 19:16:22 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Rationalised ELKS Makefiles to use standard rule prototypes, with
	  elks/Makefile-rules containing all of the standard prototypes.

Tue Aug 28 11:43:35 BST 2001	Paul Nasrat <pnasrat@uk.now.com>

	* Patched ELKS CVS source to compile for SIBO.

Mon Aug 27 11:59:12 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Changed tcpdev.c to use semaphores now we have them.
	* Fixed bug in inet_read(). Should sleep again if woken up and has
	  no lock on the buffer.
	* Did some inet code cleanup
	* Some fixes to the tcp behavior.

Mon Aug 27 08:24:38 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Unfolded prototype rules in makefiles.

Sun Aug 26 21:22:43 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Rationalised elks/Makefile somewhat, ready for standardising the
	  Makefile rules throughout the ELKS source tree.

Sun Aug 26 10:54:19 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Clarified what is being incremented and decremented in sleepwake.c
	  up() and down() routines.

Sat Aug 25 23:32:20 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fixed bug in sleepwake.c . In down() *s-- was actualy decreasing the
	  address with funny results!. Changed to --*s.

Fri Aug 24 18:23:54 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Made /dev/tcpdev return EBUSY if used.

Thu Aug 23 23:43:28 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Fixed printout alignment error in arch/i86/kernel/printreg.c and
	  offered apologies to HarKal for the syntax error fixed below.
	* Reformatted CHANGELOG back to 80 columns.